# image_compress

./: .gitignore  README.md  pyproject.toml
src/compress/: __main__.py  core.py  main.py  setup.py
src/unirock_image_compress/: core.py  entry.py  main.py
