[tool.poetry]
name = "unirock-compress"
version = "0.1.0"
description = ""
authors = ["kiortir <kiortir@yandex.ru>"]
readme = "README.md"
packages = [{ include = "compress", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "10.2.0"
mozjpeg-lossless-optimization = "1.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
setuptools = "^69.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
